[package]
name = "lau-contact-agents"
version = "0.1.0"
edition = "2021"
description = "Contact geometry for agents: contact manifolds, Reeb fields, contactomorphisms, Legendrian submanifolds, and thermodynamic agent dynamics"
license = "MIT"

[dependencies]
nalgebra = { version = "0.33", features = ["serde-serialize"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
